--- a/lrec2016.bib
+++ b/lrec2016.bib
@@ -19,6 +19,15 @@
   year = 2012,
 }
 
+@InProceedings{Boh:10,
+    author = {Bernd Bohnet},
+    title = {Very {H}igh {A}ccuracy and {F}ast {D}ependency {P}arsing is not a {C}ontradiction},
+    booktitle = {Proceedings of the 23rd {I}nternational {C}onference on {C}omputational {L}inguistics},
+    pages = {89--97},
+    year = {2010},
+    address = {Beijing, China},
+}
+
 @InProceedings{Elm:Joh:Kle:13,
 author = {Jacob Elming and Anders Johannsen and Sigrid Klerke and Emanuele Lapponi and Hector Martinez and Anders S{\o}gaard},
 title = {Down-stream effects of tree-to-dependency conversions},
@@ -34,6 +43,15 @@ pages ={617--626},
   publisher = 	 {Universitetsforlaget},
   address = 	 {Oslo, Norway},
   year = 	 {1997}}
+
+@InProceedings{Gim:Mar:04,
+    author = {Jes{\'u}s Gim{\'e}nez and Llu{\'i}s M{\`a}rquez},
+    title = {S{VMT}ool: {A} {G}eneral {POS} {T}agger {G}enerator {B}ased on {S}upport {V}ector {M}achines},
+    booktitle = {Proceedings of the {F}ourth {I}nternational {C}onference on {L}anguage {R}esources and {E}valuation},
+    pages = {43--46},
+    year = {2004},
+    address = {Lisbon, Portugal},
+}
 
 @InProceedings{Hag:Joh:Nok:00,
   author = 	 {Kristin Hagen and Janne Bondi Johannessen and Anders N{\o}klestad},
